fixed image being too big

--- a/landing/landing.css
+++ b/landing/landing.css
@@ -65,7 +65,7 @@ section {
     height: 100%;
     z-index: -1;
     background-position: center top;
-    background-size: 640px;
+    background-size: auto 100%;
     background-repeat: no-repeat;
 }
 
